# task-manager

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py
app/crud/: task.py
app/models/: task.py
app/routers/: task.py
app/schemas/: task.py
